--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,12 @@ services:
         command: --default-authentication-plugin=mysql_native_password
         restart: always
         environment:
-            MYSQL_ROOT_PASSWORD: rooter
+            MYSQL_ROOT_PASSWORD: admin
             MYSQL_DATABASE: desafio_pix
             MYSQL_USER: rayller
             MYSQL_PASSWORD: emery
         ports:
-            - 3308:3306
+            - 3306:3306
         volumes: 
             - mysql_pix:/var/lib/mysql
 
