--- a/pipeline/helm/buildspec.yaml
+++ b/pipeline/helm/buildspec.yaml
@@ -40,7 +40,7 @@ phases:
       - echo Push completed on `date`  
       - echo deploying to cluster...
       - helm version --short
-      - helm lint pipeline/helm/rayller-ot5-key-manager --values pipeline/helm/rayller-ot5-key-manager/values.yaml
+      - helm lint pipeline/helm/key-manager --values pipeline/helm/key-manager/values.yaml
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $ARN_ROLE
       - kubectl get nodes
-      - helm upgrade -i $DEPLOYMENT_NAME pipeline/helm/rayller-ot5-key-manager/ --values pipeline/helm/rayller-ot5-key-manager/values.yaml
+      - helm upgrade -i rayller-ot5-key-manager pipeline/helm/key-manager/ --values pipeline/helm/key-manager/values.yaml
